--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - 2.7
 install:
-  - python setup.py develop --user
+  - python setup.py -q install
   - pip install --user codecov
 script:
   - ./coverage.sh
