--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - 2.7
 install:
   - python setup.py -q install
-  - pip install --user codecov
+  - pip install codecov
 script:
   - ./coverage.sh
 after_success:
